--- a/src/app/design/molecules/formly-typeahead-field/formly-typeahead-field.component.html
+++ b/src/app/design/molecules/formly-typeahead-field/formly-typeahead-field.component.html
@@ -7,7 +7,7 @@
       [text]="selectedItemLabel"
       [title]="'Clear this option'"
       [icon]="'times'"
-      [clickable]="true"
+      [interactionMode]="'BUTTON'"
       [maxLength]="20"
       (badgeClick)="resetSelectedValue()"
       (click)="$event.stopPropagation()"
