--- a/src/app/design/molecules/small-create-form/small-create-form.component.html
+++ b/src/app/design/molecules/small-create-form/small-create-form.component.html
@@ -15,7 +15,7 @@
     [kind]="'PRIMARY'"
     [icon]="'plus'"
     [text]="badgeText()"
-    [clickable]="true"
+    [interactionMode]="'BUTTON'"
     [hotkey]="createHotkey()"
     [disabledHotkey]="disableHotkeys()"
     (hotkeyPressed)="toggleForm()"
