--- a/src/app/design/organisms/location/location.component.html
+++ b/src/app/design/organisms/location/location.component.html
@@ -1,6 +1,8 @@
-<h4 class="card__heading">
-  {{ location().name }}
-</h4>
+<a class="location-title" [routerLink]="link()">
+  <h4 class="card__heading">
+    {{ location().name }}
+  </h4>
+</a>
 
 <!-- Location -->
 <div class="card__text">
