--- a/src/app/design/templates/campaign-admin/campaign-admin.component.html
+++ b/src/app/design/templates/campaign-admin/campaign-admin.component.html
@@ -1,8 +1,7 @@
 <app-page-container>
   <article class="container campaign">
     <div class="campaign__edit-container">
-      <a [routerLink]="updateUrl">
-        <button btn [icon]="'pencil'" [kind]="'SECONDARY'"></button>
+      <a btn [routerLink]="updateUrl" [icon]="'pencil'" [kind]="'SECONDARY'">
       </a>
     </div>
 
