--- a/src/app/design/templates/quest-overview/quest-overview.component.html
+++ b/src/app/design/templates/quest-overview/quest-overview.component.html
@@ -3,16 +3,17 @@
     <!-- Heading -->
     <h1 class="quests__heading">Quests</h1>
 
-    <div class="row mb-3 quests__create">
-      <a class="quests__create-link" [routerLink]="createUrl()" #createLink>
-        <button
-          btn
-          [kind]="'PRIMARY'"
-          [icon]="'plus'"
-          [text]="'Add quest'"
-          [hotkey]="'c'"
-          (hotkeyPressed)="createLink.click()"
-        ></button>
+    <div class="mb-3 quests__create">
+      <a
+        btn
+        class="quests__create-link"
+        [routerLink]="createUrl()"
+        [kind]="'PRIMARY'"
+        [icon]="'plus'"
+        [text]="'Add quest'"
+        [hotkey]="'c'"
+        (hotkeyPressed)="$event.host.click()"
+      >
       </a>
     </div>
 
@@ -28,10 +29,13 @@
     </div>
 
     <!-- Footer -->
-    <div class="row">
-      <a [routerLink]="homeUrl()" class="quests__home">
-        <button btn [kind]="'SECONDARY'" [text]="'Back To Frontpage'"></button>
-      </a>
-    </div>
+    <a
+      btn
+      class="quests__home"
+      [routerLink]="homeUrl()"
+      [kind]="'SECONDARY'"
+      [text]="'Back To Frontpage'"
+    >
+    </a>
   </article>
 </app-page-container>
