--- a/src/app/general/pages/error-page/error-page.component.html
+++ b/src/app/general/pages/error-page/error-page.component.html
@@ -16,13 +16,13 @@
   </div>
 
   <ng-template #campaignLink>
-    <a [routerLink]="campaignHomeUrl()">
-      <button
-        btn
-        [kind]="'PRIMARY'"
-        [text]="'Retry'"
-        [icon]="'redo-alt'"
-      ></button>
+    <a
+      [routerLink]="campaignHomeUrl()"
+      btn
+      [kind]="'PRIMARY'"
+      [text]="'Retry'"
+      [icon]="'redo-alt'"
+    >
     </a>
   </ng-template>
 
