--- a/src/app/design/atoms/badge/badge.component.html
+++ b/src/app/design/atoms/badge/badge.component.html
@@ -1,9 +1,17 @@
-@if (clickable()) {
-  <button type="button" class="badge-button" (click)="badgeClick.emit()">
+@switch (interactionMode()) {
+  @case ("LINK") {
+    <a type="button" class="badge-button" [routerLink]="link()">
+      <ng-container [ngTemplateOutlet]="content" />
+    </a>
+  }
+  @case ("BUTTON") {
+    <button type="button" class="badge-button" (click)="badgeClick.emit()">
+      <ng-container [ngTemplateOutlet]="content" />
+    </button>
+  }
+  @case ("NONE") {
     <ng-container [ngTemplateOutlet]="content" />
-  </button>
-} @else {
-  <ng-container [ngTemplateOutlet]="content" />
+  }
 }
 
 <ng-template #content>
