--- a/src/app/design/organisms/image-grid/image-grid.component.scss
+++ b/src/app/design/organisms/image-grid/image-grid.component.scss
@@ -32,7 +32,7 @@
     opacity: 1;
 
     .entry__heading {
-      color: var(--link-blue);
+      color: var(--bs-link-hover-color);
       transform: scale(1.3);
       transition: transform 0.2s ease-in-out;
     }
