--- a/src/app/design/organisms/location/location.component.scss
+++ b/src/app/design/organisms/location/location.component.scss
@@ -1,17 +1,20 @@
-.card{
+.location-title {
+  width: fit-content;
+  display: block;
+}
+
+.card {
   margin-top: var(--spacer-3);
   margin-bottom: var(--spacer-3);
   padding: var(--spacer-4);
-  
-  &__heading{
+
+  &__heading {
     display: flex;
     align-items: center;
     justify-content: space-between;
   }
-  
-  &__text{
+
+  &__text {
     margin-bottom: var(--spacer-4);
-
   }
-
 }
