--- a/src/app/design/templates/spells-template/spells-template.component.html
+++ b/src/app/design/templates/spells-template/spells-template.component.html
@@ -31,8 +31,13 @@
     ></app-spells>
 
     <div class="container">
-      <a class="back-link" [routerLink]="homeUrl()">
-        <button btn [kind]="'SECONDARY'" [text]="'Back to Frontpage'"></button>
+      <a
+        class="back-link"
+        [routerLink]="homeUrl()"
+        btn
+        [kind]="'SECONDARY'"
+        [text]="'Back to Frontpage'"
+      >
       </a>
     </div>
   </article>
