--- a/src/app/design/organisms/page/page.component.scss
+++ b/src/app/design/organisms/page/page.component.scss
@@ -64,9 +64,11 @@
       var(--bs-border-color);
     border-top-width: 0px;
     transform: translateY(-1000%);
+    visibility: hidden;
     transition: transform 0.2s ease-in-out;
     z-index: 1;
     &--visible {
+      visibility: visible;
       transform: translateY(0%);
     }
   }
