--- a/src/app/design/atoms/button-link/button-link.component.scss
+++ b/src/app/design/atoms/button-link/button-link.component.scss
@@ -5,6 +5,10 @@
   align-items: center;
   justify-content: center;
   gap: var(--spacer-1);
+
+  &:focus-visible {
+    outline: var(--focus-outline);
+  }
 }
 
 .btn {
