--- a/src/app/design/atoms/button/button.component.scss
+++ b/src/app/design/atoms/button/button.component.scss
@@ -6,6 +6,10 @@
   justify-content: center;
   gap: var(--spacer-1);
 
+  &:focus-visible {
+    outline: var(--focus-outline);
+  }
+
   :disabled {
     cursor: not-allowed;
   }
