--- a/src/app/design/organisms/icon-card-list/icon-card-list.component.scss
+++ b/src/app/design/organisms/icon-card-list/icon-card-list.component.scss
@@ -10,5 +10,7 @@
   &__link {
     font-weight: unset;
     text-decoration: unset;
+    display: block;
+    border-radius: var(--bs-border-radius);
   }
 }
