--- a/src/app/design/molecules/search-field/search-field.component.scss
+++ b/src/app/design/molecules/search-field/search-field.component.scss
@@ -46,4 +46,10 @@ input[type="search"]::-webkit-search-results-decoration {
       cursor: not-allowed;
     }
   }
+
+  &__button {
+    &--disabled {
+      cursor: not-allowed;
+    }
+  }
 }
