--- a/src/app/design/templates/home/home.component.scss
+++ b/src/app/design/templates/home/home.component.scss
@@ -69,6 +69,7 @@
     border: 1px solid var(--bs-secondary);
     background-color: var(--bs-secondary);
     border-radius: var(--bs-border-radius);
+    padding-left: var(--spacer-3);
     color: var(--bs-white);
     &:focus-visible {
       outline: var(--focus-outline);
