--- a/src/app/design/organisms/sidebar/sidebar.component.scss
+++ b/src/app/design/organisms/sidebar/sidebar.component.scss
@@ -118,6 +118,7 @@ a {
     padding-left: var(--spacer-3);
     border-right: solid 2px var(--bs-white);
     outline: none;
+    border-radius: var(--bs-border-radius);
 
     &:focus-visible {
       outline: var(--focus-outline);
