--- a/src/app/design/organisms/page/page.component.html
+++ b/src/app/design/organisms/page/page.component.html
@@ -31,7 +31,7 @@
     >
       <app-icon [icon]="'arrow-up-long'" />
     </button>
-    <main [id]="contentId()">
+    <main class="page__main" [id]="contentId()">
       <router-outlet #routerOutlet></router-outlet>
     </main>
   </div>
