--- a/src/app/design/organisms/page/page.component.scss
+++ b/src/app/design/organisms/page/page.component.scss
@@ -78,6 +78,12 @@
     padding: var(--spacer-0);
     width: 100%;
     height: 100%;
+  }
+
+  &__main {
+    padding: var(--spacer-0);
+    width: 100%;
+    height: 100%;
     overflow: auto;
   }
 
